--- a/index.html
+++ b/index.html
@@ -17,19 +17,15 @@
             0% {
                 transform: scale(1);
             }
-
             30% {
                 transform: scale(1.2);
             }
-
             50% {
                 transform: scale(0.9);
             }
-
             70% {
                 transform: scale(1.05);
             }
-
             100% {
                 transform: scale(1);
             }
@@ -37,6 +33,17 @@
 
         .btn.clicked {
             animation: bounce 0.5s ease;
+        }
+
+        /* Bottom-right signature styling */
+        .signature {
+            position: fixed;
+            bottom: 10px;
+            right: 20px;
+            font-size: 28px;  /* Same size as the header */
+            font-family: "Sacramento", cursive; /* Same font */
+            color: #ff4081; /* Romantic pinkish color */
+            text-align: right;
         }
     </style>
 </head>
@@ -58,6 +65,9 @@
     <img id="randomGif"
         style="opacity: 0.8; display: none; position: fixed; top: 20%; left: 84%; transform: translate(-50%, -50%); max-width: 300px; border: 2px solid #fff; border-radius: 10px; z-index: 1000;"
         alt="Random Gif" />
+
+    <!-- Signature text at the bottom-right -->
+    <h1 class="header_text signature">with 💖 Karn</h1>
 
     <script>
         // Prevent overlapping GIFs
@@ -139,9 +149,6 @@
             }, 1400);
         }
     </script>
-    
 </body>
-
-    
 
 </html>
