--- a/index.html
+++ b/index.html
@@ -14,36 +14,29 @@
     <style>
         /* Bounce animation for the Yes button */
         @keyframes bounce {
-            0% { transform: scale(1); }
-            30% { transform: scale(1.2); }
-            50% { transform: scale(0.9); }
-            70% { transform: scale(1.05); }
-            100% { transform: scale(1); }
+            0% {
+                transform: scale(1);
+            }
+
+            30% {
+                transform: scale(1.2);
+            }
+
+            50% {
+                transform: scale(0.9);
+            }
+
+            70% {
+                transform: scale(1.05);
+            }
+
+            100% {
+                transform: scale(1);
+            }
         }
 
         .btn.clicked {
             animation: bounce 0.5s ease;
-        }
-
-        /* Keep "with 💖 Karn" inside container at bottom-right */
-        .signature {
-            position: absolute;
-            bottom: 10px;
-            right: 20px;
-            font-size: 18px;
-            font-family: "Sacramento", cursive;
-            color: #ff4081; /* Romantic pink color */
-        }
-
-        /* Ensure the container is positioned properly */
-        .container {
-            position: relative; /* Allows elements inside to use absolute positioning */
-            padding-bottom: 50px; /* Prevents overlap with signature */
-        }
-
-        /* Allow No button to move freely */
-        #noButton {
-            position: absolute;
         }
     </style>
 </head>
@@ -52,14 +45,13 @@
     <div class="container">
         <h1 class="header_text">Will You Be My Valentine?</h1>
         <div class="image_container">
+            <!-- Replace with your selected romantic photo -->
             <img src="assets/images/romantic-photo.jpg" alt="Romantic Background">
         </div>
         <div class="buttons">
             <button class="btn" id="yesButton" onclick="goToYesPage()">Yes!</button>
             <button class="btn" id="noButton" onmouseover="evadeButton()" onclick="evadeButton()">No</button>
         </div>
-        <!-- Corrected: "with 💖 Karn" positioned at bottom-right inside container -->
-        <h1 class="header_text signature">with 💖 Karn</h1>
     </div>
 
     <!-- Random GIF container (initially hidden) -->
@@ -87,34 +79,45 @@
             const btnWidth = noBtn.offsetWidth;
             const btnHeight = noBtn.offsetHeight;
             const maxX = window.innerWidth - btnWidth;
+
+            // Avoid the top region where the GIF is displayed (e.g., top 25% of the screen)
             const minY = window.innerHeight * 0.3;
             const maxY = window.innerHeight - btnHeight;
 
             const randomX = Math.random() * maxX;
             const randomY = Math.random() * (maxY - minY) + minY;
 
+            noBtn.style.position = "absolute";
             noBtn.style.left = randomX + "px";
             noBtn.style.top = randomY + "px";
 
             // Check if a GIF is already active; if so, exit.
             const gifDisplay = document.getElementById("randomGif");
-            if (gifActive) return;
+            if (gifActive) {
+                return;
+            }
             gifActive = true;
 
             // Pick and display a random GIF
             const randomIndex = Math.floor(Math.random() * gifUrls.length);
-            gifDisplay.src = gifUrls[randomIndex];
+            const selectedGif = gifUrls[randomIndex];
+            gifDisplay.src = selectedGif;
             gifDisplay.style.display = "block";
             gifDisplay.style.opacity = 0;
             gifDisplay.style.transition = "opacity 0.5s";
 
-            setTimeout(() => { gifDisplay.style.opacity = 1; }, 50);
+            // Fade in the GIF
+            setTimeout(() => {
+                gifDisplay.style.opacity = 1;
+            }, 50);
+
+            // Keep the GIF visible for 5 seconds, then fade it out smoothly
             setTimeout(() => {
                 gifDisplay.style.opacity = 0;
                 setTimeout(() => {
                     gifDisplay.style.display = "none";
                     gifActive = false;
-                }, 500);
+                }, 500); // Wait for fade-out to complete (500ms)
             }, 5000);
         }
 
@@ -124,13 +127,43 @@
             yesBtn.classList.add("clicked");
 
             // Trigger confetti explosion
-            confetti({ particleCount: 150, spread: 70, origin: { y: 0.6 } });
+            confetti({
+                particleCount: 150,
+                spread: 70,
+                origin: { y: 0.6 }
+            });
 
             // Wait for the animation and confetti effect before redirecting
-            setTimeout(() => { window.location.href = "yes.html"; }, 1400);
+            setTimeout(() => {
+                window.location.href = "yes.html";
+            }, 1400);
         }
     </script>
 
+
+
+<script>
+    // Create an audio element and store it globally
+    let audio = new Audio("assets/audio/love.mp3");
+    audio.loop = true; // Ensure looping
+  
+    // Function to play music
+    function playMusic() {
+      if (!localStorage.getItem("musicPlaying")) {
+        audio.play().then(() => {
+          localStorage.setItem("musicPlaying", "true");
+        }).catch(err => console.log("Autoplay blocked", err));
+      }
+    }
+  
+    // Play music when the user interacts
+    document.addEventListener("click", playMusic);
+    document.addEventListener("DOMContentLoaded", playMusic);
+  </script>
+  
 </body>
 
 </html>
+
+
+
