--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
         /* Style for the signature */
         .signature {
-            position: absolute;
+            position: right;
             bottom: 10px;
             right: 20px;
             font-size: 1.5rem;
