--- a/index.html
+++ b/index.html
@@ -41,10 +41,12 @@
 
         /* Style for the signature */
         .signature {
-            position: right;
-            bottom: 10px;
-            right: 80px;
-            font-size: 1.5rem;
+           
+
+             text-align: right; /* Align to the right */
+    font-size: 1.5rem;
+    margin-top: 20px; /* Add space between the buttons and text */
+    padding-right: 20px;
         }
     </style>
 </head>
