--- a/index.html
+++ b/index.html
@@ -5,110 +5,172 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Will You Be My Valentine?</title>
+    <!-- Google Fonts for a playful look -->
     <link href="https://fonts.googleapis.com/css2?family=Sacramento&family=Nunito:wght@400;700&display=swap"
         rel="stylesheet" />
     <link rel="stylesheet" href="styles/styles.css" />
+    <!-- Include canvas-confetti for confetti animation -->
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
     <style>
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background-color: #ffe4e1;
-            font-family: 'Nunito', sans-serif;
-            margin: 0;
+        /* Bounce animation for the Yes button */
+        @keyframes bounce {
+            0% {
+                transform: scale(1);
+            }
+
+            30% {
+                transform: scale(1.2);
+            }
+
+            50% {
+                transform: scale(0.9);
+            }
+
+            70% {
+                transform: scale(1.05);
+            }
+
+            100% {
+                transform: scale(1);
+            }
         }
 
-        .wrapper {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            gap: 20px;
-            position: relative;
+        .btn.clicked {
+            animation: bounce 0.5s ease;
         }
 
-        .quote-box {
-            width: 200px;
-            height: auto;
-            padding: 15px;
-            background-color: #fff0f5;
-            border-radius: 10px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            text-align: center;
-            font-size: 16px;
-            font-weight: bold;
-            color: #c71585;
-        }
-
-        .container {
-            text-align: center;
-            background: white;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-        }
-
-        .buttons {
-            margin-top: 20px;
-        }
-
+        /* Style for the signature */
         .signature {
-            text-align: right;
-            font-size: 1.5rem;
-            margin-top: 10px;
-            padding-right: 20px;
+           
+
+             text-align: right; /* Align to the right */
+    font-size: 1.5rem;
+    margin-top: 10px; /* Add space between the buttons and text */
+    padding-right: 20px;
         }
     </style>
 </head>
 
 <body>
-    <div class="wrapper">
-        <div class="quote-box">"Love is not about how many days, months, or years you have been together. It's all about how much you love each other every day."</div>
-
-        <div class="container">
-            <h1 class="header_text">Will You Be My Valentine?</h1>
-            <div class="image_container">
-                <img src="assets/images/romantic-photo.jpg" alt="Romantic Background">
-            </div>
-            <div class="buttons">
-                <button class="btn" id="yesButton" onclick="goToYesPage()">Yes!</button>
-                <button class="btn" id="noButton" onmouseover="evadeButton()" onclick="evadeButton()">No</button>
-            </div>
-            <h1 class="header_text signature">With 💖 Karn</h1>
+    <div class="container">
+        <h1 class="header_text">Will You Be My Valentine?</h1>
+        <div class="image_container">
+            <!-- Replace with your selected romantic photo -->
+            <img src="assets/images/romantic-photo.jpg" alt="Romantic Background">
         </div>
-
-        <div class="quote-box">"You are my today and all of my tomorrows. - Leo Christopher"</div>
+        <div class="buttons">
+            <button class="btn" id="yesButton" onclick="goToYesPage()">Yes!</button>
+            <button class="btn" id="noButton" onmouseover="evadeButton()" onclick="evadeButton()">No</button>
+        </div>
+        
+        <h1 class="header_text signature">With 💖 Karn</h1>
     </div>
 
+    <!-- Random GIF container (initially hidden) -->
+    <img id="randomGif"
+        style="opacity: 0.8; display: none; position: fixed; top: 20%; left: 84%; transform: translate(-50%, -50%); max-width: 300px; border: 2px solid #fff; border-radius: 10px; z-index: 1000;"
+        alt="Random Gif" />
+
     <script>
+        // Prevent overlapping GIFs
+        let gifActive = false;
+
+        // Array of GIF URLs – replace these with your actual GIF URLs
+        const gifUrls = [
+            "assets/gifs/AngryBugcatStickerByCapoo.gif",
+            "assets/gifs/BugcatWhatStickerByCapoo.gif",
+            "assets/gifs/CatNoStickerByCapoo.gif",
+            "assets/gifs/FreezingColdStickerByCapoo.gif",
+            "assets/gifs/SadBugcatStickerByCapoo.gif",
+            "assets/gifs/SadCryGIFByCapoo.gif"
+        ];
+
+        // Function to move the "No" button and show a random GIF
         function evadeButton() {
             const noBtn = document.getElementById("noButton");
             const btnWidth = noBtn.offsetWidth;
             const btnHeight = noBtn.offsetHeight;
             const maxX = window.innerWidth - btnWidth;
+
+            // Avoid the top region where the GIF is displayed (e.g., top 25% of the screen)
             const minY = window.innerHeight * 0.3;
             const maxY = window.innerHeight - btnHeight;
+
             const randomX = Math.random() * maxX;
             const randomY = Math.random() * (maxY - minY) + minY;
+
             noBtn.style.position = "absolute";
             noBtn.style.left = randomX + "px";
             noBtn.style.top = randomY + "px";
+
+            // Check if a GIF is already active; if so, exit.
+            const gifDisplay = document.getElementById("randomGif");
+            if (gifActive) {
+                return;
+            }
+            gifActive = true;
+
+            // Pick and display a random GIF
+            const randomIndex = Math.floor(Math.random() * gifUrls.length);
+            const selectedGif = gifUrls[randomIndex];
+            gifDisplay.src = selectedGif;
+            gifDisplay.style.display = "block";
+            gifDisplay.style.opacity = 0;
+            gifDisplay.style.transition = "opacity 0.5s";
+
+            // Fade in the GIF
+            setTimeout(() => {
+                gifDisplay.style.opacity = 1;
+            }, 50);
+
+            // Keep the GIF visible for 5 seconds, then fade it out smoothly
+            setTimeout(() => {
+                gifDisplay.style.opacity = 0;
+                setTimeout(() => {
+                    gifDisplay.style.display = "none";
+                    gifActive = false;
+                }, 500); // Wait for fade-out to complete (500ms)
+            }, 5000);
         }
 
+        // Function to animate the Yes button and navigate to the next page
         function goToYesPage() {
             const yesBtn = document.getElementById("yesButton");
             yesBtn.classList.add("clicked");
+
+            // Trigger confetti explosion
             confetti({
                 particleCount: 150,
                 spread: 70,
                 origin: { y: 0.6 }
             });
+
+            // Wait for the animation and confetti effect before redirecting
             setTimeout(() => {
                 window.location.href = "yes.html";
             }, 1400);
         }
     </script>
+
+    <script>
+        // Create an audio element and store it globally
+        let audio = new Audio("assets/audio/love.mp3");
+        audio.loop = true; // Ensure looping
+
+        // Function to play music
+        function playMusic() {
+            if (!localStorage.getItem("musicPlaying")) {
+                audio.play().then(() => {
+                    localStorage.setItem("musicPlaying", "true");
+                }).catch(err => console.log("Autoplay blocked", err));
+            }
+        }
+
+        // Play music when the user interacts
+        document.addEventListener("click", playMusic);
+        document.addEventListener("DOMContentLoaded", playMusic);
+    </script>
+
 </body>
 
 </html>
