--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
     <script>
         // Create an audio element and store it globally
-        let audio = new Audio("assets/audio/love.mp3");
+        let audio = new Audio("assets/audio/apt_bubu_dudu.mp3");
         audio.loop = true; // Ensure looping
 
         // Function to play music
