--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>cuz , u r the only one , others are 9s nd 10s</title>
+    <title>Karn_</title>
     <!-- Google Fonts for a playful look -->
     <link href="https://fonts.googleapis.com/css2?family=Sacramento&family=Nunito:wght@400;700&display=swap"
         rel="stylesheet" />
@@ -63,7 +63,7 @@
             <button class="btn" id="noButton" onmouseover="evadeButton()" onclick="evadeButton()">No</button>
         </div>
         
-<!--         <h2 class="header_text signature">mucho 💖 Karn</h1> -->
+        <h2 class="header_text signature">mucho 💖 Karn</h1>
     </div>
 
     <!-- Random GIF container (initially hidden) -->
