--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
             <button class="btn" id="yesButton" onclick="goToYesPage()">Yes!</button>
             <button class="btn" id="noButton" onmouseover="evadeButton()" onclick="evadeButton()">No</button>
         </div>
-        
-        <h2 class="header_text signature">mucho 💖 Karn</h1>
+<!--         
+        <h2 class="header_text signature">mucho 💖 Karn</h1> -->
     </div>
 
     <!-- Random GIF container (initially hidden) -->
